--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,28 @@
+:root {
+  --yellow: #f7c748;
+  --turquoise: #6ad5d4;
+  --purple: #6a78d7;
+  --pink: #f1b9e8;
+  --orange: #d78060;
+  --black: #452206;
+}
+
+@font-face {
+  font-family: 'Lazer84';
+  src: url('/fonts/Lazer84.ttf');
+  font-style: normal;
+  font-weight: 400;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-size: 62.5%;
+  color: var(--black);
+  overflow: hidden;
 }
 
 a {
@@ -13,4 +32,14 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+main {
+  height: 100vh;
+}
+
+.flex {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
