--- a/components/Button.module.css
+++ b/components/Button.module.css
@@ -13,4 +13,5 @@
   -moz-box-shadow: 6px 6px 0px 0px var(--black);
   -webkit-box-shadow: 6px 6px 0px 0px var(--black);
   box-shadow: 6px 6px 0px 0px var(--black);
+  z-index: 10;
 }
