--- a/components/TextBox.module.css
+++ b/components/TextBox.module.css
@@ -12,5 +12,6 @@
   padding: 0.8rem;
   text-align: center;
   transform: rotate(-6.5deg);
+  z-index: 10;
   /* font-family: 'Covered By Your Grace', cursive; */
 }
