--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,11 @@
 :root {
   --yellow: #f7c748;
   --turquoise: #6ad5d4;
-  --purple: #6a78d7;
-  --pink: #f1b9e8;
+  --purple: #6779d6;
+  --pink: #f197e0;
   --orange: #d78060;
   --black: #452206;
+  --box: 6px 6px 0px 0px var(--black);
 }
 
 @font-face {
@@ -22,7 +23,9 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-size: 62.5%;
   color: var(--black);
-  overflow: hidden;
+  max-width: 428px;
+  margin: 0 auto;
+  background: var(--purple);
 }
 
 a {
@@ -36,10 +39,87 @@ a {
 
 main {
   height: 100vh;
+  padding-top: 7vh;
+  border: 4px solid var(--black);
+  box-shadow: var(--box);
+  max-height: 926px;
+  background-image: url('/background.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  overflow: hidden;
 }
 
 .flex {
   display: flex;
   justify-content: center;
   flex-direction: column;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  bottom: 7%;
+}
+
+@media only screen and (max-width: 360px) {
+  main {
+    padding-top: 12vh;
+  }
+
+  .flex {
+    margin-bottom: 5.6rem;
+  }
+}
+
+/* SHAPES */
+
+.shapes-absolute {
+  position: absolute;
+  z-index: 1;
+}
+
+.circle-pink {
+  top: -35px;
+  right: -35px;
+}
+
+.circle-purple {
+  bottom: -74px;
+  right: 15px;
+}
+
+.circle-yellow {
+  top: 40%;
+  left: -141px;
+}
+
+.crown-turquoise {
+  top: 490px;
+  right: 60px;
+}
+
+.crown-yellow {
+  top: 171px;
+  left: 70px;
+  z-index: 2;
+}
+
+.ring-orange {
+  bottom: 40px;
+  left: 35px;
+}
+
+.ring-pink {
+  bottom: 85px;
+  right: 50px;
+}
+
+.ring-yellow {
+  top: 30px;
+  left: 50px;
+}
+
+.wiggle {
+  top: 63%;
+  left: -74px;
 }
