--- a/components/Form.module.css
+++ b/components/Form.module.css
@@ -6,20 +6,40 @@
   padding: 0 2.4rem;
   z-index: 2;
   position: relative;
+  margin-top: 3.2rem;
+}
+
+.radio {
+  display: flex;
+  background: var(--yellow);
+  padding: 1.6rem;
+  font-family: 'Covered By Your Grace', cursive;
+  font-size: 3.2rem;
+  line-height: 4rem;
+  width: max-content;
+  margin: 0 auto;
+  margin-bottom: 1.6rem;
+  transform: rotate(2.87deg);
+  box-shadow: var(--box);
+}
+
+.marginRight {
+  margin-right: 1.2rem;
 }
 
 .label {
   padding: 0.8rem 1.6rem;
   color: var(--black);
   background: var(--pink);
-  font-family: Sora;
+  font-family: Sora, sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 1.2rem;
   line-height: 2rem;
   text-transform: capitalize;
-  max-width: min-content;
+  width: max-content;
   box-shadow: var(--box);
+  margin-bottom: 1.2rem;
 }
 
 .input {
@@ -28,14 +48,19 @@
   padding: 1.6rem;
   font-size: 1.6rem;
   line-height: 2.4rem;
+  margin-bottom: 1.6rem;
+  font-family: Sora, sans-serif;
 }
 
 .input::placeholder {
   color: var(--grey);
+  font-family: Sora, sans-serif;
 }
 
 .submit {
   margin: 0 auto;
+  margin-top: 3.2rem;
+  margin-bottom: 4.8rem;
   padding: 0.8rem 3.2rem;
   font-size: 2.4rem;
   line-height: 3.2rem;
