--- a/styles/globals.css
+++ b/styles/globals.css
@@ -115,6 +115,41 @@ main {
   left: -74px;
 }
 
+/* FOR RADIO BUTTONS */
+
+input[type='radio'] {
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: #fff;
+  margin: 0;
+  appearance: none;
+  background-color: #fff;
+  margin: 0;
+  font: inherit;
+  color: currentColor;
+  width: 1.15em;
+  height: 1.15em;
+  border: 0.15em solid currentColor;
+  border-radius: 50%;
+  transform: translateY(-0.0001em);
+  display: grid;
+  place-content: center;
+}
+
+input[type='radio']::before {
+  content: '';
+  width: 0.65em;
+  height: 0.65em;
+  border-radius: 50%;
+  transform: scale(0);
+  transition: 120ms transform ease-in-out;
+  box-shadow: inset 1em 1em var(--black);
+}
+
+input[type='radio']:checked::before {
+  transform: scale(1);
+}
+
 @media only screen and (max-width: 360px) {
   main {
     padding-top: 12vh;
