--- a/components/TextBox.module.css
+++ b/components/TextBox.module.css
@@ -51,3 +51,13 @@
   z-index: 10;
   position: relative;
 }
+
+.subText {
+  font-family: 'Sora', sans-serif;
+  font-size: 2.4rem;
+  margin-top: -0.8rem;
+  line-height: 3.2rem;
+  font-weight: 400;
+  letter-spacing: 0.1em;
+  text-align: center;
+}
