--- a/components/TextBox.module.css
+++ b/components/TextBox.module.css
@@ -3,7 +3,7 @@
   -webkit-box-shadow: 6px 6px 0px 0px var(--black);
   box-shadow: 6px 6px 0px 0px var(--black);
   background: var(--turquoise);
-  font-family: 'Sora', sans-serif;
+  font-family: 'sora', sans-serif;
   font-size: 1.2rem;
   font-weight: bold;
   line-height: 2rem;
