--- a/components/FormExample.module.css
+++ b/components/FormExample.module.css
@@ -102,6 +102,7 @@
   -moz-box-shadow: 6px 6px 0px 0px var(--black);
   -webkit-box-shadow: 6px 6px 0px 0px var(--black);
   box-shadow: 6px 6px 0px 0px var(--black);
+  border: 2px solid var(--black);
 }
 
 .loading {
