--- a/components/Message.module.css
+++ b/components/Message.module.css
@@ -4,16 +4,15 @@
   padding: 0.8rem 3.2rem;
   font-size: 2.4rem;
   line-height: 3.2rem;
-  text-transform: uppercase;
   letter-spacing: 1.5px;
   text-align: center;
   font-family: 'Sora', sans-serif;
-  background: var(--yellow);
+  background: var(--pink);
   width: 70%;
   font-weight: bold;
   -moz-box-shadow: 6px 6px 0px 0px var(--black);
   -webkit-box-shadow: 6px 6px 0px 0px var(--black);
   box-shadow: 6px 6px 0px 0px var(--black);
   z-index: 10;
-  border: 2px solid var(--black);
+  transform: rotate(3.5deg);
 }
