--- a/components/InfoText.module.css
+++ b/components/InfoText.module.css
@@ -98,6 +98,7 @@
   font-weight: 400;
   letter-spacing: 0.1em;
   font-style: italic;
+  text-transform: none;
 }
 .transport {
   font-size: 1.6rem;
